--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,17 +31,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_staggered_grid_view: ^0.4.0
+  flutter_svg: ^1.1.1+1
+  google_mobile_ads: ^1.3.0
   intl: ^0.17.0
   provider: ^6.0.3
   sqflite: ^2.0.2+1
-  google_mobile_ads: ^1.3.0
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
@@ -55,9 +51,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
